media-tools/lidarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media-tools
spec:
  replicas: 0
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        name: lidarr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: server-type
                operator: In
                values:
                - nuc
      containers:
      - name: lidarr
        image: linuxserver/lidarr
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8686
          initialDelaySeconds: 15
          periodSeconds: 120
        volumeMounts:
        - name: lidarr-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: longhorn-lidarr-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: longhorn-media-downloads-pvc
      automountServiceAccountToken: false
