media-tools/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr-service
  name: lidarr-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8686
    protocol: TCP
    targetPort: 8686
    name: web
  selector:
    app: lidarr
