media-tools/lidarr/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lidarr
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: lidarr
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8686"        
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8686"
    - fromEndpoints:
        - matchLabels:
            app: overseerr
      toPorts:
        - ports:
            - port: "8686"
    - fromEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "8686"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            mariadb-client: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "3306"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "9696"
    - toEndpoints:
        - matchLabels:
            app: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app: transmission
      toPorts:
        - ports:
            - port: "9091"
    - toServices:
        - k8sService:
            serviceName: postgres-rw
            namespace: postgres
